[P] SKILL_DODGE
[H] Hardness of walls are reverted to the original.
[B] anti_magic and antimagic :)
[B] 'Travak' was sling-shot and mass-produced.

24/06/2002
[C]- .mangrc changed to .tomenetrc
[C]- Chardump ability in the char screen

25/06/2002 (Jir)
- SKILL_SPELLRAD('Revelation') (oh, sry DG, it's last one :)
- race/class additions/deletions can be done without client update.
[B] classname.prf file wasn't read correctly.



** [B] stands for Bugfix.
** [C] stands for Client changes.
** [H] stands for Hack and rebalancement :)
** [P] stands for Porting from ToME.

=============================================================================
things to do before 4.0.0

- make NO_TELE radius-based
- implement guest-account
- rebalance skill-points
- adjust depth for ball-type trap
- fix gfx
- source-code cleanup
- export configurable things to tomenet.cfg

(multi-dungeon, multi-town, terrains, pets etc. are put off after 4.0.0 ...)


=============================================================================
concisely: what's hot now?

- multiple-dungeons stuff
  + we should preserve level_up_y etc. for manually-added dungeons/towers.
- quest system
- skill system
  + SKILL_CLIMB
  + spell_info should be redone
  + bare-handed combat?
- LUA hook
- csfunc
- alignment (let's wait for EE :)
- item stacking

=============================================================================
below this line are the unfixed bugs known:

[B] House doors still seem to crash sometimes. (door even vanishes??)
[B] wpos display hides wound states(eg.'Deep Gash')
[B] ever-charging arts (eg.star)
[B] 'You hit it.' etc in town (99% problem in zcave.m_idx)
    sometimes, monsters attack the player from nowhere.. prolly same root?
	* this only happens when rebooting the server and caves lost.
[B] some monsters become 'immune' to spell attacks.
[B][C] chat-history contains lines with 'mindcrafter'. 
[B] p_ptr->furry, lol
[B] 'Ring of Polymorphing of'.